src/Homepage.css
.Homepage {
  /* put around the vertical center of page */
  min-height: calc(100vh - 70px);
  display: flex;
  align-items: center;
  color: var(--primary-color);
  background-image: url("./assets/images/treehouse.webp");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.Homepage-title {
  font-size: 76px;
  font-weight: 700;
  text-shadow: 1px 1px 2px var(--black-color);
}

.Homepage-name {
  color: var(--primary-color);
  font-size: 42px;
  text-shadow: 1px 1px 2.5px var(--black-color);
}

.Homepage-message {
  font-size: 22px;
  font-weight: 500;
  margin-top: -25px;
  font-style: italic;
  color: var(--white-color);
  text-shadow: 0 1px 5px var(--gray-color);
}

.Homepage-welcome {
  color: var(--white-color);
}

.btn__home {
  border: none;
  color: var(--primary-color);
  margin: 10px;
  border-radius: 10px;
  box-shadow: 0px 1px 1.5px 0 var(--green-color);
}

.btn__home:hover {
  background-color: var(--green-color);
  border-color: var(--primary-color);
}

.btn-start {
  font-size: 20px;
  text-decoration: none;
  color: var(--white-color);
  border-radius: 10px;
  border: none;
  box-shadow: 0 1px 1.5px 0px var(--white-color);
}

.btn-start:hover {
  color: var(--white-color);
  background-color: var(--primary-color);
  box-shadow: none;
  opacity: 0.8;
  transition: 0.5s;
}

/* Fade-in effect */

.fade-in {
  animation: fadeIn ease 2s;
  -webkit-animation: fadeIn ease 2s;
  -moz-animation: fadeIn ease 2s;
  -o-animation: fadeIn ease 2s;
  -ms-animation: fadeIn ease 2s;
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-moz-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-webkit-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-o-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-ms-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

/* Fade-in effect - btn */

.fade-in-btn {
  animation: fadeIn ease 5s;
  -webkit-animation: fadeIn ease 5s;
  -moz-animation: fadeIn ease 5s;
  -o-animation: fadeIn ease 5s;
  -ms-animation: fadeIn ease 5s;
}

@keyframes fadeIn {
  15% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-moz-keyframes fadeIn {
  15% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-webkit-keyframes fadeIn {
  15% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-o-keyframes fadeIn {
  15% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-ms-keyframes fadeIn {
  15% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@media (max-width: 767px) {
  .Homepage {
    min-height: calc(100vh - 150px);
  }

  .mountain__logo {
    width: 300px;
  }
  .Homepage-title {
    font-size: 64px;
  }
  .Homepage-name {
    font-size: 36px;
  }
  .Homepage-message {
    font-size: 18px;
  }
  .btn-start {
    font-size: 16px;
  }
}

